--- a/framework/css/styles.css
+++ b/framework/css/styles.css
@@ -5,13 +5,17 @@
 /* Print styles for Facilitator Guide */
 @media print {
 
-  body {
-    font-size: 1.7rem;
+  body, p, td, tr {
+    font-size: 1.5rem;
     font-weight:100;
   }
 
   h1, h2, h3, h4{
-    font-size: 2.2rem;
+    font-size: 2.0rem;
+  }
+
+  img{
+    width:1.2rem;
   }
 
 }
